crates/fec-cli/src/tui/filing_detail/snapshots/libfec__tui__filing_detail__tests__filing_detail_f4.snap
---
source: crates/fec-cli/src/tui/filing_detail/mod.rs
expression: "render_fixture(\"F4N_1901605.fec\", 100, 50)"
snapshot_kind: text
---
"FEC-1901605 F4N July Quarterly by Development Now for Chicago (C00838862)                           "
"2025-04-01 through 2025-06-30                                                                       "
"                                                                                                    "
"Signed by: Michelle Harris on 2025-07-15                                                            "
"                                                                                                    "
"Address:          2045 West Grant Ave, Suite B                                                      "
"                  Chicago, IL 60612                                                                 "
"Type:             Host Committee (H)                                                                "
"Report:           July Quarterly (Q2)                                                               "
"                                                                                                    "
"SECTION A - CASH BALANCE SUMMARY                                                                    "
"                                                      This Period     Calendar YTD                  "
"6(a) Cash on hand Jan 1, 2025                                        $6,348,148.24                  "
"6(b) Cash on hand, beginning                        $6,589,793.13                                   "
"6(c) Total receipts                                   $453,030.27    $1,347,684.81                  "
"6(d) Subtotal                                       $7,042,823.40    $7,695,833.05                  "
"7.   Total disbursements                              $294,205.33      $947,214.98                  "
"8.   Cash on hand at close                          $6,748,618.07    $6,748,618.07                  "
"9.   Debts owed TO committee                                $0.00                                   "
"10.  Debts owed BY committee                                $0.00                                   "
"                                                                                                    "
"SECTION B - EXPENDITURES SUBJECT TO LIMITATION                                                      "
"                                                      This Period     Calendar YTD                  "
"11.  Convention expenditures                          $294,205.33      $947,214.98                  "
"12.  Refunds re: convention                           $396,877.24    $1,226,515.62                  "
"12(a) Subject to limitation                          -$102,671.91     -$279,300.64                  "
"12(b) Prior years, subject                                  $0.00            $0.00                  "
"12(c) Total subject to limit                                          -$279,300.64                  "
"                                                                                                    "
"DETAILED SUMMARY - RECEIPTS                                                                         "
"                                                      This Period     Calendar YTD                  "
"13.  Federal funds                                          $0.00            $0.00                  "
"14.  Contributions                                                                                  "
"  (a) Itemized                                              $0.00                                   "
"  (b) Unitemized                                            $0.00                                   "
"  (c) Subtotal                                              $0.00        $8,333.34                  "
"15.  Transfers from affiliated                              $0.00            $0.00                  "
"16.  Loans received                                                                                 "
"  (a) Loans received                                        $0.00                                   "
"  (b) Repayments received                                   $0.00                                   "
"  (c) Subtotal                                              $0.00            $0.00                  "
"17.  Refunds re: convention                                                                         "
"  (a) Itemized                                        $396,877.24                                   "
"  (b) Unitemized                                            $0.00                                   "
"  (c) Subtotal                                        $396,877.24    $1,226,515.62                  "
"18.  Other refunds                                                                                  "
"  (a) Itemized                                              $0.00                                   "
"  (b) Unitemized                                            $0.00                                   "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"                           Esc/q back  c filer  o open  y copy  j/k scroll                          "
