crates/fec-cli/src/tui/filing_detail/snapshots/libfec__tui__filing_detail__tests__filing_detail_f4_narrow.snap
---
source: crates/fec-cli/src/tui/filing_detail/mod.rs
expression: "render_fixture(\"F4N_1920068.fec\", 60, 40)"
snapshot_kind: text
---
"FEC-1920068 F4N October Quarterly by Development Now for Chi"
"2025-07-01 through 2025-09-30                               "
"                                                            "
"Signed by: Michelle Harris on 2025-10-15                    "
"                                                            "
"Address:      2045 West Grant Ave, Suite B, Chicago, IL     "
"60612                                                       "
"Type:         H (Host Committee)                            "
"Report:       Q3 (October Quarterly)                        "
"                                                            "
"SECTION A - CASH BALANCE SUMMARY                            "
"                                  This Period   Calendar YTD"
"6(a) Cash on hand Jan 1, 2025               -  $6,348,148.24"
"6(b) Cash on hand, beginning    $6,748,618.07              -"
"6(c) Total receipts                $56,617.91  $1,404,302.72"
"6(d) Subtotal                   $6,805,235.98  $7,752,450.96"
"7.   Total disbursements           $78,589.01  $1,025,803.99"
"8.   Cash on hand at close      $6,726,646.97  $6,726,646.97"
"9.   Debts owed TO committee            $0.00              -"
"10.  Debts owed BY committee            $0.00              -"
"                                                            "
"SECTION B - EXPENDITURES SUBJECT TO LIMITATION              "
"                                  This Period   Calendar YTD"
"11.  Convention expenditures       $78,589.01  $1,025,803.99"
"12.  Refunds re: convention             $0.00  $1,226,515.62"
"12(a) Subject to limitation        $78,589.01   -$200,711.63"
"12(b) Prior years, subject              $0.00          $0.00"
"12(c) Total subject to limit                -   -$200,711.63"
"                                                            "
"DETAILED SUMMARY - RECEIPTS                                 "
"                                  This Period   Calendar YTD"
"13.  Federal funds                      $0.00          $0.00"
"14.  Contributions                                          "
"      (a) Itemized                      $0.00              -"
"      (b) Unitemized                    $0.00              -"
"      (c) Subtotal                      $0.00      $8,333.34"
"15.  Transfers from affiliated          $0.00          $0.00"
"16.  Loans received                                         "
"────────────────────────────────────────────────────────────"
"       Esc/q back  c filer  o open  y copy  j/k scroll      "
