crates/fec-cli/src/tui/filing_detail/snapshots/libfec__tui__filing_detail__tests__filing_detail_f5a.snap
---
source: crates/fec-cli/src/tui/filing_detail/mod.rs
expression: "render_fixture(\"F5A_1900837.fec\", 100, 50)"
snapshot_kind: text
---
"FEC-1900837 F5A Year-End by AMERICAN MAJORITY ACTION INC. (C90011891)                               "
"2024-10-01 through 2024-12-31                                                                       "
"                                                                                                    "
"Signed by: Kelly Amorin on 2025-07-14                                                               "
"                                                                                                    "
" YE  January 31 Year-End Report                                                                     "
"AMENDMENT of the report filed 2025-04-17                                                            "
"                                                                                                    "
"Filer                                                                                               "
"Name:             AMERICAN MAJORITY ACTION INC.                                                     "
"Entity type:      ORG                                                                               "
"FEC ID:           C90011891                                                                         "
"Address:          P.O. Box 309                                                                      "
"                  Purcellville, VA 20134                                                            "
"                                                                                                    "
"Totals This Period                                                                                  "
"6. Total Contributions                                $200,000.00                                   "
"7. Total Independent Expenditures                     $197,091.44                                   "
"                                                                                                    "
"Certified under penalty of perjury that the expenditures were not made in cooperation, consultation,"
"or concert with any candidate, committee or party.                                                  "
"                                                                                                    "
"URL: https://docquery.fec.gov/cgi-bin/forms/C90011891/1900837                                       "
"                                                                                                    "
"Version: v8.4  Size: 215 B                                                                          "
"Software: FECfile 8.4.0.0(f32)                                                                      "
"Report ID: 'FEC-1888698' (1)                                                                        "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"                           Esc/q back  c filer  o open  y copy  j/k scroll                          "
