crates/fec-cli/src/tui/filing_detail/snapshots/libfec__tui__filing_detail__tests__filing_detail_f5n_24_hour.snap
---
source: crates/fec-cli/src/tui/filing_detail/mod.rs
expression: "render_fixture(\"F5N_1914346.fec\", 100, 50)"
snapshot_kind: text
---
"FEC-1914346 F5N [Unknown report code] by Heritage Action for America (C90013525)                    "
"2025-09-08 through 2025-09-08                                                                       "
"                                                                                                    "
"Signed by: Tiffany Justice on 2025-09-09                                                            "
"                                                                                                    "
" 24-HOUR REPORT  of Independent Expenditures                                                        "
"Coverage dates are optional on 24/48-hour reports and may be the dates the communication aired.     "
"                                                                                                    "
"Filer                                                                                               "
"  Name            Heritage Action for America                                                       "
"  Entity type     ORG                                                                               "
"  FEC ID          C90013525                                                                         "
"  Address         214 Massachusetts Avenue NE, Washington, DC 20002                                 "
"                                                                                                    "
"Totals This Period                                                                                  "
"  6. Total Contributions                         $0.00                                              "
"  7. Total Independent Expenditures          $2,790.00                                              "
"                                                                                                    "
"Certified under penalty of perjury that the expenditures were not made in cooperation, consultation,"
"or concert with any candidate, committee or party.                                                  "
"                                                                                                    "
"URL: https://docquery.fec.gov/cgi-bin/forms/C90013525/1914346                                       "
"                                                                                                    "
"Version: v8.5  Size: 203 B                                                                          "
"Software: FEC WebForms 8.5.0.0                                                                      "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"                           Esc/q back  c filer  o open  y copy  j/k scroll                          "
