crates/fec-cli/src/tui/filing_detail/snapshots/libfec__tui__filing_detail__tests__filing_detail_f5n_quarterly.snap
---
source: crates/fec-cli/src/tui/filing_detail/mod.rs
expression: "render_fixture(\"F5N_1888248.fec\", 100, 50)"
snapshot_kind: text
---
"FEC-1888248 F5N April Quarterly by The Conservative Caucus dba Americans for Constitutional Liberty "
"2025-01-01 through 2025-03-31                                                                       "
"                                                                                                    "
"Signed by: Mr. Jim Pfaff on 2025-04-15                                                              "
"                                                                                                    "
" Q1  April 15 Quarterly Report                                                                      "
"                                                                                                    "
"Filer                                                                                               "
"  Name            The Conservative Caucus dba Americans for Constitutional Liberty                  "
"  Entity type     ORG                                                                               "
"  FEC ID          C90018904                                                                         "
"  Address         3057 Nutley Street, Suite 502, Fairfax, VA 22031                                  "
"                                                                                                    "
"Totals This Period                                                                                  "
"  6. Total Contributions                    $69,696.49                                              "
"  7. Total Independent Expenditures         $79,857.54                                              "
"                                                                                                    "
"Certified under penalty of perjury that the expenditures were not made in cooperation, consultation,"
"or concert with any candidate, committee or party.                                                  "
"                                                                                                    "
"URL: https://docquery.fec.gov/cgi-bin/forms/C90018904/1888248                                       "
"                                                                                                    "
"Version: v8.4  Size: 238 B                                                                          "
"Software: ISPolitical.com 42                                                                        "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"                           Esc/q back  c filer  o open  y copy  j/k scroll                          "
