crates/fec-cli/src/tui/filing_detail/snapshots/libfec__tui__filing_detail__tests__filing_detail_f6a.snap
---
source: crates/fec-cli/src/tui/filing_detail/mod.rs
expression: "render_fixture(\"F6A_1952182.fec\", 100, 50)"
snapshot_kind: text
---
"FEC-1952182 F6A  by Talarico for Texas (C00919084)                                                  "
"Signed by: Lauren Decot Lee on 2026-03-08                                                           "
"                                                                                                    "
" 48-HOUR NOTICE  of Contributions/Loans Received                                                    "
"AMENDMENT of the notice filed 2026-03-01                                                            "
"Contributions and loans of $1,000 or more received after the 20th day, but more than 48 hours,      "
"before the election.                                                                                "
"                                                                                                    "
"Candidate                                                                                           "
"  Name            James Talarico                                                                    "
"  Candidate ID    S6TX00479                                                                         "
"  Office sought   Senate - TX                                                                       "
"                                                                                                    "
"Committee                                                                                           "
"  Name            Talarico for Texas                                                                "
"  FEC ID          C00919084                                                                         "
"  Address         PO Box 14508, Austin, TX 78761                                                    "
"                                                                                                    "
"Contributions are itemized on this notice's F65 rows and itemized again in the first report filed   "
"after the election.                                                                                 "
"                                                                                                    "
"URL: https://docquery.fec.gov/cgi-bin/forms/C00919084/1952182                                       "
"                                                                                                    "
"Version: v8.5  Size: 167 B                                                                          "
"Software: NGP 8                                                                                     "
"Report ID: 'FEC-1951139' (1)                                                                        "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"                           Esc/q back  c filer  o open  y copy  j/k scroll                          "
