crates/fec-cli/src/tui/filing_detail/snapshots/libfec__tui__filing_detail__tests__filing_detail_f6n_narrow.snap
---
source: crates/fec-cli/src/tui/filing_detail/mod.rs
expression: "render_fixture(\"F6N_1947008.fec\", 60, 40)"
snapshot_kind: text
---
"FEC-1947008 F6N by KEN PAXTON FOR SENATE (C00901918)        "
"Signed by: JOHN PLISHKA on 2026-02-17                       "
"                                                            "
" 48-HOUR NOTICE  of Contributions/Loans Received            "
"Contributions and loans of $1,000 or more received after the"
"20th day, but more than 48 hours, before the election.      "
"                                                            "
"Candidate                                                   "
"Name:             WARREN KENNETH PAXTON JR.                 "
"Candidate ID:     S6TX00388                                 "
"Office sought:    Senate - TX                               "
"                                                            "
"Committee                                                   "
"Name:             KEN PAXTON FOR SENATE                     "
"FEC ID:           C00901918                                 "
"Address:          110 NORTH AKARD ST, PMB #40               "
"                  DALLAS, TX 75201                          "
"                                                            "
"Contributions are itemized on this notice's F65 rows and    "
"itemized again in the first report filed after the election."
"                                                            "
"URL:                                                        "
"https://docquery.fec.gov/cgi-bin/forms/C00901918/1947008    "
"                                                            "
"Version: v8.5  Size: 187 B                                  "
"Software: CMDI CRIMSON FILER 8.0                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"────────────────────────────────────────────────────────────"
"       Esc/q back  c filer  o open  y copy  j/k scroll      "
